C2: API 34 (Android U / 14), Gradle 8.4, AGP 8.1.2, Java 17.